# stradibot

./: CMakeLists.txt  controller.cpp  redis_keys.h  simviz.cpp  world_stradibot.urdf
sounds/: string1_g3_clean_16.raw  string2_d4_clean_16.raw  string3_a4_clean_16.raw  string4_e5_clean_16.raw
urdf_models/: world_stradibot.urdf
urdf_models/flexiv_violin/: flexiv.urdf  violin.urdf
urdf_models/flexiv_violin/meshes/violin/: collision_violin.mtl  violin.mtl
urdf_models/flexiv_violin/meshes/violin/Violin/: Violin N180319.mtl
